Add the card layout for the item
Now show an option the see the item in card style

--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -30,3 +30,11 @@ a.label:visited{
     margin-right : 10px;
     height:30px;
 }
+
+.clear-left{
+  clear:left;
+}
+
+.clear-right {
+  clear: right;
+}
