--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -27,7 +27,7 @@ jwplayer("<%= image%>
 	<div class="span9">
 		<%else%>
 			<%end%>
-			<div class="span7">
+			<div class="span12">
 			<% if @item.uri.starts_with?('http://twitter.com')
           thumb="assets/twitter.png"
         else
@@ -35,7 +35,15 @@ jwplayer("<%= image%>
         end
 %>
 			<img src="<%= thumb%>" class="littleCircleImage" width=30 height=30>
-			<a href= "<%= @item.uri %>"> <%= @item.props["http://purl.org/rss/1.0/title"][0]%> </a>
+			<a href= "<%= @item.uri %>"> <%= @item.props["http://purl.org/rss/1.0/title"][0]%> </a> 
+			<br class="brcard" hidden>
+			<button class="btn btnFavorite row-favorite" disabled><i class="icon icon-heart"></i><i> <%= raw t 'items.users.favorite' %></i></button>
+			<button class="btn btnMarkasRead row-favorite" disabled><i class="icon icon-check"></i><i> <%= raw t 'items.users.read' %></i></button>
+			
+			<span class="separationLine row-favorite" ></span>
+			<img src="assets/foregroundFBGray.png" class="littleCircleImage row-favorite" width=30 height=30>
+			<img src="assets/foregroundTwitterGray.png" class="littleCircleImage row-favorite" width=30 height=30>
+			<img src="assets/foregroundGoogleGray.png" class="littleCircleImage row-favorite" width=30 height=30>
 			<br>
 			<i>
 			<%= begin
@@ -44,18 +52,9 @@ date.strftime('Le %d/%m/%Y à %H:%M')
           
         rescue
         end %></i>
+       
         </div>
-        <div class="span5 row-favorite" style="display:none">
-		<button class="btn" disabled><i class="icon icon-heart"></i><i> <%= raw t 'items.users.favorite' %></i></button>
-		<button class="btn" disabled><i class="icon icon-check"></i><i> <%= raw t 'items.users.read' %></i></button>
-		
-		<span class="separationLine" ></span>
-		
-		<i><%= raw t 'items.users.share' %> </i>
-		<img src="assets/foregroundFBGray.png" class="littleCircleImage" width=30 height=30>
-		<img src="assets/foregroundTwitterGray.png" class="littleCircleImage" width=30 height=30>
-		<img src="assets/foregroundGoogleGray.png" class="littleCircleImage" width=30 height=30>
-	</div>
+        
 	</div>
 	<div class="row-fluid">
 	<div class="span12">
