--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -36,7 +36,7 @@ jwplayer("<%= image%>
         end
 %>
 			<img src="<%= thumb%>" class="littleCircleImage" width=30 height=30>
-			<a href= "<%= @item.uri %>"> <%= @item.props["http://purl.org/rss/1.0/title"][0]%> </a> 
+			<a class="titleItem" href= "<%= @item.uri %>"> <%= @item.props["http://purl.org/rss/1.0/title"][0]%> </a> 
 			<br class="brcard" hidden>
 			<button class="btn btnFavorite row-favorite" disabled><i class="icon icon-heart"></i><i> <%= raw t 'items.users.favorite' %></i></button>
 			<button class="btn btnMarkasRead row-favorite" disabled><i class="icon icon-check"></i><i> <%= raw t 'items.users.read' %></i></button>
@@ -46,14 +46,16 @@ jwplayer("<%= image%>
 			<img src="assets/foregroundTwitterGray.png" class="littleCircleImage row-favorite" width=30 height=30>
 			<img src="assets/foregroundGoogleGray.png" class="littleCircleImage row-favorite" width=30 height=30>
 			<br>
+			
 			<i>
 			<%= begin
 				date = DateTime.parse(@item.props["http://purl.org/rss/1.0/pubDate"][0])
-date.strftime('Le %d/%m/%Y à %H:%M')
+date.strftime('Le %d/%m/%Y à %H:%M - ')
           
         rescue
         end %></i>
-       
+        <a class="sourceHover" href="<%= @item.uri %>"><i><%=getTitleSource(@item.uri)%></i></a>
+        <a class="sourceHoverFull" href="<%= @item.uri %>" style="display:none"><i><%=@item.uri%></i></a>	
         </div>
         <div class="row-fluid">
 		<div class="btn-toolbar">
