Put the favorite bar under the content
The favorite bar is now always visible when card layout

--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -40,7 +40,7 @@ a.label:visited{
 }
 
 .item-bloc:nth-child(odd).span5{
-  margin-left:0;
+  margin-left:0px;
 }
 
 .sourceHover:hover,.sourceHoverFull:hover,.titleItem:hover{
