--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -36,8 +36,7 @@ jwplayer("<%= image%>
         end
 %>
 			<img src="<%= thumb%>" class="littleCircleImage" width=30 height=30>
-			<a class="titleItem" href= "<%= @item.uri %>"> <%= @item.props["http://purl.org/rss/1.0/title"][0]%> </a> 
-			<br class="brcard" hidden>
+			<a class="titleItem" href= "<%= @item.uri %>"><b><%= @item.props["http://purl.org/rss/1.0/title"][0]%> </b> </a> 
 			<button class="btn btnFavorite row-favorite" disabled><i class="icon icon-heart"></i><i> <%= raw t 'items.users.favorite' %></i></button>
 			<button class="btn btnMarkasRead row-favorite" disabled><i class="icon icon-check"></i><i> <%= raw t 'items.users.read' %></i></button>
 			
@@ -82,6 +81,15 @@ date.strftime('Le %d/%m/%Y à %H:%M - ')
 			<%= if @item.props["http://purl.org/rss/1.0/description"] != nil
     			@item.props["http://purl.org/rss/1.0/description"][0].html_safe end %>
 		</div>
+		<div class="pull-right">
+		<button class="btn btnFavorite row-list" disabled><i class="icon icon-heart"></i><i> <%= raw t 'items.users.favorite' %></i></button>
+			<button class="btn btnMarkasRead row-list" disabled><i class="icon icon-check"></i><i> <%= raw t 'items.users.read' %></i></button>
+			
+			<span class="separationLine row-list pull-right" ></span>
+			<img src="assets/foregroundFBGray.png" class="littleCircleImage row-list" width=30 height=30>
+			<img src="assets/foregroundTwitterGray.png" class="littleCircleImage row-list" width=30 height=30>
+			<img src="assets/foregroundGoogleGray.png" class="littleCircleImage row-list" width=30 height=30>
+			</div>
 		</div>
 	</div>
 	<hr>
