--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -18,6 +18,7 @@ a.label:visited{
 
 .btn-group-label{
   margin-right: 5px;
+  opacity:1;
 }
 
 .separationLine
@@ -49,3 +50,47 @@ a.label:visited{
   text-decoration : none;
 }
 
+.label-important[href] , .label-important[href]:visited, .label-important[href]:hover{
+  color : #953b39;
+  background-color : #f5f5f5;
+  border:1px solid #e3e3e3;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+  text-shadow: none;
+}
+
+.label-success[href] , .label-success[href]:visited, .label-success[href]:hover{
+  color : #356635;
+  background-color : #f5f5f5;
+  border:1px solid #e3e3e3;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+  text-shadow: none;
+}
+
+.label-info[href] , .label-info[href]:visited, .label-info[href]:hover{
+  color : #2d6987;
+  background-color : #f5f5f5;
+  border:1px solid #e3e3e3;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+  text-shadow: none;
+}
+
+.label-warning[href] , .label-warning[href]:visited, .label-warning[href]:hover{
+  color : #c67605;
+  background-color : #f5f5f5;
+  border:1px solid #e3e3e3;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+  text-shadow: none;
+}
+
+.label[href]:hover{
+  text-decoration : underline;
+}
+
+.titletag{
+  margin-top:10px;
+  margin-right:5px;
+}
