--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -86,6 +86,21 @@ a.label:visited{
   text-shadow: none;
 }
 
+.label-inverse[href] , .label-inverse[href]:visited, .label-inverse[href]:hover{
+  color : #000;
+  background-color : #f5f5f5;
+  border:1px solid #e3e3e3;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+  text-shadow: none;
+}
+
 .label[href]:hover{
   text-decoration : underline;
 }
+
+.tableReminderPanel{
+  max-height:400px;
+  overflow:auto;
+}
+  
