Moved the text to yml file

--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -34,10 +34,10 @@ event.preventDefault(); // Prevent link from following its href
 </div>
 <div class="well">
 	<div class="row-fluid">
-		<div id="TableReminderSourceTitle" class="span6" data-content="Tag bien ajouté" data-original-title="Confirmation d'ajout">
+		<div id="TableReminderSourceTitle" class="span6" data-content="<%= raw t 'items.popover.content' %>" data-original-title="<%= raw t 'items.popover.title' %>">
 			<h3><%= raw t 'items.reminder.source' %> ( 0 items )</h3>
 		</div>
-		<div id="TableReminderFilteringTitle" class="span5" data-content="Tag bien ajouté" data-original-title="Confirmation d'ajout">
+		<div id="TableReminderFilteringTitle" class="span5" data-content="<%= raw t 'items.popover.content' %>" data-original-title="<%= raw t 'items.popover.title' %>">
 			<h3><%= raw t 'items.reminder.filtering' %> ( 0 items )</h3>
 		</div>
 		<div class="span1">
