--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -37,8 +37,8 @@ jwplayer("<%= image%>
 %>
 			<img src="<%= thumb%>" class="littleCircleImage" width=30 height=30>
 			<a class="titleItem" href= "<%= @item.uri %>"><b><%= @item.props["http://purl.org/rss/1.0/title"][0]%> </b> </a> 
-			<button class="btn btnFavorite row-favorite" disabled><i class="icon icon-heart"></i><i> <%= raw t 'items.users.favorite' %></i></button>
-			<button class="btn btnMarkasRead row-favorite" disabled><i class="icon icon-check"></i><i> <%= raw t 'items.users.read' %></i></button>
+			<button class="btn btnFavorite row-favorite" disabled><i class="icon icon-heart"></i></button>
+			<button class="btn btnMarkasRead row-favorite" disabled><i class="icon icon-check"></i></button>
 			
 			<span class="separationLine row-favorite" ></span>
 			<img src="assets/foregroundFBGray.png" class="littleCircleImage row-favorite" width=30 height=30>
