--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -48,6 +48,9 @@ event.preventDefault(); // Prevent link from following its href
 			<button class="btn pull-right chevronup" style="display:none" onclick="$('.tableReminder').slideUp('slow');$('.chevrondown').show();$('.chevronup').hide()">
 				<i class="icon icon-chevron-up"></i>
 			</button></h3>
+			<span id="reminderAnd" hidden><%= raw t 'semanticfiltering.keyword.and' %></span>
+			<span id="reminderOr" hidden><%= raw t 'semanticfiltering.keyword.or' %></span>
+			<span id="reminderWithout" hidden><%= raw t 'semanticfiltering.keyword.without' %></span>
 		</div>
 
 	</div>
