Hide the annotation bar
Now the annotation bar is hidden and will be shown only if you click on
the annotation button next to the favorite row

Changed the AND, OR, WITHOUT button in the tag popover to + - and O

--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -123,4 +123,8 @@ a.label:visited{
 .td-warning{
   background-image: linear-gradient(to bottom,rgba(238, 95, 91, 0.1),rgba(189, 54, 47, 0.1));
 }
+
+.borderLess{
+  border:none;
+}
   
