--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -37,6 +37,7 @@ jwplayer("<%= image%>
 %>
 			<img src="<%= thumb%>" class="littleCircleImage" width=30 height=30>
 			<a class="titleItem" href= "<%= @item.uri %>"><b><%= @item.props["http://purl.org/rss/1.0/title"][0]%> </b> </a> 
+			<button class="btn row-favorite" data-toggle="collapse" data-parent="#accordion-<%= @uriHash%>" href="#collapse-<%= @uriHash%>"><i class="icon icon-tag"></i></button>
 			<button class="btn btnFavorite row-favorite" disabled><i class="icon icon-heart"></i></button>
 			<button class="btn btnMarkasRead row-favorite" disabled><i class="icon icon-check"></i></button>
 			
@@ -83,7 +84,8 @@ date.strftime('Le %d/%m/%Y à %H:%M - ')
     			@item.props["http://purl.org/rss/1.0/description"][0].html_safe end %>
 		</div>
 		<div class="pull-right">
-		<button class="btn btnFavorite row-list" disabled><i class="icon icon-heart"></i><i> <%= raw t 'items.users.favorite' %></i></button>
+			<button class="btn row-list" data-toggle="collapse" data-parent="#accordion-<%= @uriHash%>" href="#collapse-<%= @uriHash%>"><i class="icon icon-tag"></i></button>
+			<button class="btn btnFavorite row-list" disabled><i class="icon icon-heart"></i><i> <%= raw t 'items.users.favorite' %></i></button>
 			<button class="btn btnMarkasRead row-list" disabled><i class="icon icon-check"></i><i> <%= raw t 'items.users.read' %></i></button>
 			
 			<span class="separationLine row-list pull-right" ></span>
@@ -93,14 +95,10 @@ date.strftime('Le %d/%m/%Y à %H:%M - ')
 			</div>
 		</div>
 	</div>
-	<hr>
 </div>
 <div class="row-fluid">
 	<div class="accordion" id="accordion-<%= @uriHash %>" style="margin-bottom: 0px;">
-		<div class="accordion-group">
-			<div class="accordion-heading">
-				<a class="accordion-toggle btn btn-mini" data-toggle="collapse" data-parent="#accordion-<%= @uriHash%>" href="#collapse-<%= @uriHash%>"> Voir les annotations </a>
-			</div>
+		<div class="accordion-group borderLess">
 			<div id="collapse-<%= @uriHash%>" class="accordion-body collapse">
 				<div class="accordion-inner" style="padding: 0px;">
 					<table class="table table-striped">
@@ -124,7 +122,7 @@ date.strftime('Le %d/%m/%Y à %H:%M - ')
 							<%= link_to value,value %>
 							<%else%>
 							<%= value %>
-							<%end%> </td><td> <%= link_to "Ajouter au filtre", items_path(:old => @filters,:new => Filter.new({:prop =>prop, :value => value})), :class => "btn btn-success" %></td>
+							<%end%> </td>
 						</tr>
 						<% end%>
 						<%end%>
