--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -85,8 +85,8 @@ date.strftime('Le %d/%m/%Y à %H:%M - ')
 		</div>
 		<div class="pull-right">
 			<button class="btn row-list" data-toggle="collapse" data-parent="#accordion-<%= @uriHash%>" href="#collapse-<%= @uriHash%>"><i class="icon icon-tag"></i></button>
-			<button class="btn btnFavorite row-list" disabled><i class="icon icon-heart"></i><i> <%= raw t 'items.users.favorite' %></i></button>
-			<button class="btn btnMarkasRead row-list" disabled><i class="icon icon-check"></i><i> <%= raw t 'items.users.read' %></i></button>
+			<button class="btn btnFavorite row-list" disabled><i class="icon icon-heart"></i></button>
+			<button class="btn btnMarkasRead row-list" disabled><i class="icon icon-check"></i></button>
 			
 			<span class="separationLine row-list pull-right" ></span>
 			<img src="assets/foregroundFBGray.png" class="littleCircleImage row-list" width=30 height=30>
