--- a/ZONE-watcher/app/views/home/_search.html.erb
+++ b/ZONE-watcher/app/views/home/_search.html.erb
@@ -6,15 +6,16 @@
 
     <div class="search-zone">
       <form action="/items">
-        <div class="input">
+        <div class="input row-fluid">
+        	 <input id="search-form" class="span12" ></input>
           <!-- search box -->
-          <ul id="search-form" class="fake-input" tabindex="1">
+         <!-- <ul id="search-form" class="fake-input" tabindex="1">
             <% if @purFilters != nil && @purFilters.length > 0 %>
                 <% @purFilters.each do |filter| %>
                     <li><%= filter.get_search_button %></li>
                 <% end %>
             <% end %>
-          </ul>
+         </ul>-->
         </div>
 
         <!-- sources select bouton
