--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -5,189 +5,199 @@
 
 <!--<div class="modal-body">-->
 <div class="row-fluid">
-	<div class="span12">
-		<span id="openSource"><%= raw t 'semanticsource.title' %></span> & <span id="openFiltering"><%= raw t 'semanticfiltering.title' %></span>
+	<div class="span12 basicMouse" style="text-align:center;margin-top:20%">
+		<h1 style="font-size: 50px"><%= raw t 'modal.select' %> <span id="openSource" class="pointerMouse" style="text-decoration: underline"><%= raw t 'semanticsource.title' %></span> & <span id="openFiltering" class="pointerMouse" style="text-decoration: underline"><%= raw t 'semanticfiltering.title' %></span></h1>
+	</div>
+</div>
+<div class="row-fluid">
+	<div class="span12 basicMouse" style="text-align:center;">
+		<p class="muted"><%= raw t 'modal.helper' %></p>	
 	</div>
 </div>
 <form action="/items" method="GET" id="formModal">
-	<div id="Sources" class="row-fluid">
-		<div class="span1"></div>
-		<!--3 images flipper -->
-		<div class="span5">
-			<ul class="unstyled">
-				<li>
-					<div class="flipper">
-						<div class="front"><img class="circleImage" src="/assets/foregroundTwitter.png"/>
-						</div>
-						<div id="formTwitter" class="back paddingFour" style="background-image: url('/assets/backgroundTwitter.png');">
-							<p></p><p></p>
-							<p>
-								<i class="icon-white icon-user"></i>
-								<input name="inputLogin" type="text" class="inputLogin span10" id="loginTwitter" placeholder="Login" onclick="$(this).prop('readonly',false);$('#searchTwitter').prop('readonly',true);$('#searchTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}">
-							</p>
-							<p>
-								<i class="icon-search icon-white"></i>
-								<input name="inputSearch" type="text" class="inputSearch span10" id="searchTwitter" placeholder="Tag" readonly onclick="$(this).prop('readonly',false);$('#loginTwitter').prop('readonly',true);$('#loginTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}" />
-
-								<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formTwitter');return false;">
-									<%= raw t 'semanticsource.button.addall' %>
-								</button>
-								<button class="pull-right btn btn-info" type="button" onclick="addRowSourceTable('#formTwitter');return false;">
-									<%= raw t 'semanticsource.button.addone' %>
-								</button>
-							</p>
-						</div>
-					</div>
-				</li>
-				<li>
-					<div class="flipper2">
-						<div class="front2"><img class="circleImage" src="/assets/foregroundGoogleGray.png"/>
-						</div>
-						<!--<div id="formGoogle" class="paddingFour back" style="background-image: url('/assets/backgroundGoogle.png');">
-						<p></p><p></p>
-						<p>
-						<i class="icon-white icon-user"></i>
-						<input name="inputLogin" id="loginGoogle" type="text" class="inputLogin span10" placeholder="Login" onclick="$(this).prop('readonly',false);$('#searchGoogle').prop('readonly',true);$('#searchGoogle').val('');" onKeyPress="if (event.keyCode == 13){addRowSourceTable('#formGoogle');return false;}">
-						</p>
-						<p>
-						<i class="icon-white icon-search"></i>
-						<input name="inputSearch" id="searchGoogle" type="text" class="inputSearch span10" placeholder="Search" readonly onclick="$(this).prop('readonly',false);$('#loginGoogle').prop('readonly',true);$('#loginGoogle').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formGoogle');return false;}">
-
-						<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formGoogle');return false;">
-						<%= raw t 'semanticsource.button.addall' %>
-						</button>
-						<button class="pull-right btn btn-danger" type="button" onclick="addRowSourceTable('#formGoogle');return false;">
-						<%= raw t 'semanticsource.button.addone' %>
-						</button>
-						</p>
-						</div>-->
-					</div>
-				</li>
-				<li>
-					<div class="flipper">
-						<div class="front"><img class="circleImage" src="/assets/foregroundRSS.png"/>
-						</div>
-						<div id="formRSS" class="back paddingFour" style="background-image: url('/assets/backgroundRSS.png');">
-							<p></p><p></p>
-							<p>
-								<input name="inputHidden" type="hidden" class="inputLogin span10">
-							</p>
-							<p>
-								<i class="icon-white icon-search"></i>
-								<input name="inputSearch" type="text" class="inputSearch span10" placeholder="URL" onKeyPress="if (event.keyCode == 13){addRowSourceTable('#formRSS');return false;}">
-
-								<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formRSS');return false;">
-									<%= raw t 'semanticsource.button.addall' %>
-								</button>
-								<button class="pull-right btn btn-warning" type="button" onclick="addRowSourceTable('#formRSS');return false;">
-									<%= raw t 'semanticsource.button.addone' %>
-								</button>
-							</p>
-						</div>
-					</div>
-				</li>
-			</ul>
-		</div>
-		<!-- resume table-->
-		<div class="span5 sourceOverflow">
-			<table class="table table-striped table-bordered table-hover pre-scrollable" id="sourceTable">
-				<thead>
-					<tr>
-						<th class="span1"><%= raw t 'semanticsource.table.keyword' %></th>
-						<th><%= raw t 'semanticsource.table.content' %></th>
-					</tr>
-				</thead>
-				<tbody></tbody>
-			</table>
+	<div class="row-fluid">
+		<div class="span12" style="text-align:center;">
+			<button id='btnGoReador' type="submit" class="btn btn-success" onclick="movingData()">
+				<h2><%= raw t 'modal.button.go' %></h2>
+			</button>
 		</div>
 	</div>
-	<div id="Filtering" class="row-fluid">
-		<div class="row-fluid">
+	<div class="row-fluid" style="margin-top:1%">
+		<div id="Sources" class="row-fluid">
 			<div class="span1"></div>
+			<!--3 images flipper -->
 			<div class="span5">
-				<div class="row-fluid">
-					<h3><%= raw t 'semanticfiltering.keyword.title' %></h3>
-				</div>
-				<div class="row-fluid">
-					<div class="input-prepend input-append">
+				<ul class="unstyled">
+					<li>
+						<div class="flipper">
+							<div class="front"><img class="circleImage" src="/assets/foregroundTwitter.png"/>
+							</div>
+							<div id="formTwitter" class="back paddingFour" style="background-image: url('/assets/backgroundTwitter.png');">
+								<p></p><p></p>
+								<p>
+									<i class="icon-white icon-user"></i>
+									<input name="inputLogin" type="text" class="inputLogin span10" id="loginTwitter" placeholder="Login" onclick="$(this).prop('readonly',false);$('#searchTwitter').prop('readonly',true);$('#searchTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}">
+								</p>
+								<p>
+									<i class="icon-search icon-white"></i>
+									<input name="inputSearch" type="text" class="inputSearch span10" id="searchTwitter" placeholder="Tag" readonly onclick="$(this).prop('readonly',false);$('#loginTwitter').prop('readonly',true);$('#loginTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}" />
 
-						<div id="btnGroupAttr" class="btn-group" data-toggle="buttons-radio">
-							<button id="btnWITH" type="button" class="btn btn-success" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.with' %>>
-								<i class="icon-plus"></i>
+									<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formTwitter');return false;">
+										<%= raw t 'semanticsource.button.addall' %>
+									</button>
+									<button class="pull-right btn btn-info" type="button" onclick="addRowSourceTable('#formTwitter');return false;">
+										<%= raw t 'semanticsource.button.addone' %>
+									</button>
+								</p>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="flipper2">
+							<div class="front2"><img class="circleImage" src="/assets/foregroundGoogleGray.png"/>
+							</div>
+							<!--<div id="formGoogle" class="paddingFour back" style="background-image: url('/assets/backgroundGoogle.png');">
+							<p></p><p></p>
+							<p>
+							<i class="icon-white icon-user"></i>
+							<input name="inputLogin" id="loginGoogle" type="text" class="inputLogin span10" placeholder="Login" onclick="$(this).prop('readonly',false);$('#searchGoogle').prop('readonly',true);$('#searchGoogle').val('');" onKeyPress="if (event.keyCode == 13){addRowSourceTable('#formGoogle');return false;}">
+							</p>
+							<p>
+							<i class="icon-white icon-search"></i>
+							<input name="inputSearch" id="searchGoogle" type="text" class="inputSearch span10" placeholder="Search" readonly onclick="$(this).prop('readonly',false);$('#loginGoogle').prop('readonly',true);$('#loginGoogle').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formGoogle');return false;}">
+
+							<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formGoogle');return false;">
+							<%= raw t 'semanticsource.button.addall' %>
 							</button>
-							<button id="btnAND" type="button" class="btn btn-success hidden" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.and' %> style="border-radius: 4px 0 0 4px">
-								<i class="icon-plus"></i>
+							<button class="pull-right btn btn-danger" type="button" onclick="addRowSourceTable('#formGoogle');return false;">
+							<%= raw t 'semanticsource.button.addone' %>
 							</button>
-							<button id="btnOR" type="button" class="btn btn-info" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.or' %> disabled>
-								<b>O</b>
-							</button>
-							<button id="btnWITHOUT" type="button" class="btn btn-danger" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.without' %>>
-								<i class="icon-minus"></i>
+							</p>
+							</div>-->
+						</div>
+					</li>
+					<li>
+						<div class="flipper">
+							<div class="front"><img class="circleImage" src="/assets/foregroundRSS.png"/>
+							</div>
+							<div id="formRSS" class="back paddingFour" style="background-image: url('/assets/backgroundRSS.png');">
+								<p></p><p></p>
+								<p>
+									<input name="inputHidden" type="hidden" class="inputLogin span10">
+								</p>
+								<p>
+									<i class="icon-white icon-search"></i>
+									<input name="inputSearch" type="text" class="inputSearch span10" placeholder="URL" onKeyPress="if (event.keyCode == 13){addRowSourceTable('#formRSS');return false;}">
+
+									<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formRSS');return false;">
+										<%= raw t 'semanticsource.button.addall' %>
+									</button>
+									<button class="pull-right btn btn-warning" type="button" onclick="addRowSourceTable('#formRSS');return false;">
+										<%= raw t 'semanticsource.button.addone' %>
+									</button>
+								</p>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<!-- resume table-->
+			<div class="span5 sourceOverflow">
+				<table class="table table-striped table-bordered table-hover pre-scrollable" id="sourceTable">
+					<thead>
+						<tr>
+							<th class="span1"><%= raw t 'semanticsource.table.keyword' %></th>
+							<th><%= raw t 'semanticsource.table.content' %></th>
+						</tr>
+					</thead>
+					<tbody></tbody>
+				</table>
+			</div>
+		</div>
+		<div id="Filtering" class="row-fluid">
+			<div class="row-fluid">
+				<div class="span1"></div>
+				<div class="span5">
+					<div class="row-fluid">
+						<h3><%= raw t 'semanticfiltering.keyword.title' %></h3>
+					</div>
+					<div class="row-fluid">
+						<div class="input-prepend input-append">
+
+							<div id="btnGroupAttr" class="btn-group" data-toggle="buttons-radio">
+								<button id="btnWITH" type="button" class="btn btn-success" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.with' %>>
+									<i class="icon-plus"></i>
+								</button>
+								<button id="btnAND" type="button" class="btn btn-success hidden" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.and' %> style="border-radius: 4px 0 0 4px">
+									<i class="icon-plus"></i>
+								</button>
+								<button id="btnOR" type="button" class="btn btn-info" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.or' %> disabled>
+									<b>O</b>
+								</button>
+								<button id="btnWITHOUT" type="button" class="btn btn-danger" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.without' %>>
+									<i class="icon-minus"></i>
+								</button>
+							</div>
+							<input id="keyword" type="text" placeholder="Keyword" style="max-width:170px" onkeypress="keywordComplete();" onkeyup="askUpdateKeywordTable();return false;">
+							<button class="btn btn-success pull-right" onclick="addFilter(); return false;">
+								<%= raw t 'semanticfiltering.button.addone' %>
 							</button>
 						</div>
-						<input id="keyword" type="text" placeholder="Keyword" style="max-width:170px" onkeypress="keywordComplete();" onkeyup="askUpdateKeywordTable();return false;">
-						<button class="btn btn-success pull-right" onclick="addFilter(); return false;">
-							<%= raw t 'semanticfiltering.button.addone' %>
+					</div>
+					<div class="row-fluid">
+						<h3><%= raw t 'semanticfiltering.linkword.title' %></h3>
+					</div>
+					<div class="row-fluid">
+						<button id="btnSelectAll" class="btn" onclick="select();return false;">
+							<%= raw t 'semanticfiltering.linkword.selectall' %>
+						</button>
+						<button id="btnUnselectAll" class="btn" onclick="unselect();return false;" >
+							<%= raw t 'semanticfiltering.linkword.unselect' %>
 						</button>
 					</div>
-				</div>
-				<div class="row-fluid">
-					<h3><%= raw t 'semanticfiltering.linkword.title' %></h3>
-				</div>
-				<div class="row-fluid">
-					<button id="btnSelectAll" class="btn" onclick="select();return false;">
-						<%= raw t 'semanticfiltering.linkword.selectall' %>
-					</button>
-					<button id="btnUnselectAll" class="btn" onclick="unselect();return false;" >
-						<%= raw t 'semanticfiltering.linkword.unselect' %>
-					</button>
-				</div>
-				<div class="row-fluid">
-					<div class="keywordOverflow">
-						<div id="progressBarFiltering" class="progress progress-striped active" style="margin-top:3em;">
-							<div class="bar bar-success" style="width: 100%;"></div>
+					<div class="row-fluid">
+						<div class="keywordOverflow">
+							<div id="progressBarFiltering" class="progress progress-striped active" style="margin-top:3em;">
+								<div class="bar bar-success" style="width: 100%;"></div>
+							</div>
+							<table class="table table-striped table-bordered table-hover pre-scrollable" id="keywordTable">
+								<tbody></tbody>
+							</table>
 						</div>
-						<table class="table table-striped table-bordered table-hover pre-scrollable" id="keywordTable">
+					</div>
+					<div class="row-fluid">
+						<h3><%= raw t 'semanticfiltering.easyfilter.title' %></h3>
+					</div>
+				</div>
+
+				<div class="span5" >
+					<h3><%= raw t 'semanticfiltering.table.title' %></h3>
+					<div class='filteringOverflow'>
+						<table class="table table-striped table-bordered table-hover pre-scrollable" id="filteringTable">
+							<thead>
+								<tr>
+									<th hidden>ID</th>
+									<th class="span1"><%= raw t 'semanticfiltering.table.keyword' %></th>
+									<th class="span4"><%= raw t 'semanticfiltering.table.content' %></th>
+								</tr>
+							</thead>
 							<tbody></tbody>
 						</table>
 					</div>
 				</div>
-				<div class="row-fluid">
-					<h3><%= raw t 'semanticfiltering.easyfilter.title' %></h3>
+			</div>
+			<div class="row-fluid">
+				<div class="span1"></div>
+				<div class="span10">
+					<textarea id="filteringArea" readonly style="width:100%; resize: none"></textarea>
 				</div>
 			</div>
+		</div>
 
-			<div class="span5" >
-				<h3><%= raw t 'semanticfiltering.table.title' %></h3>
-				<div class='filteringOverflow'>
-					<table class="table table-striped table-bordered table-hover pre-scrollable" id="filteringTable">
-						<thead>
-							<tr>
-								<th hidden>ID</th>
-								<th class="span1"><%= raw t 'semanticfiltering.table.keyword' %></th>
-								<th class="span4"><%= raw t 'semanticfiltering.table.content' %></th>
-							</tr>
-						</thead>
-						<tbody></tbody>
-					</table>
-				</div>
-			</div>
-		</div>
-		<div class="row-fluid">
-			<div class="span1"></div>
-			<div class="span10">
-				<textarea id="filteringArea" readonly style="width:100%; resize: none"></textarea>
-			</div>
-		</div>
+		<div id="movedData"></div>
 	</div>
-
-	<div id="movedData"></div>
-
-	<!--<a href="http://www.reador.net/items">-->
-	<button id='btnGoReador' type="submit" style="display :none;" class="btn btn-success" onclick="movingData()">
-		<%= raw t 'modal.button.go' %>
-	</button>
 </form>
+
 <!--</div>-->
 
 <!--
