--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -1,1 +1,108 @@
+<div class="row-fluid">
+	<div class="span12">
+		<ul class="breadcrumb">
+			<li>
+				Sources (1/2)<span class="divider">/</span>
+			</li>
+			<li>
+				Sources (2/2)<span class="divider">/</span>
+			</li>
+			<li>
+				Filtrage (1/2)<span class="divider">/</span>
+			</li>
+			<li>
+				Filtrage (2/2)<span class="divider">/</span>
+			</li>
+			<li>
+				Résultats
+			</li>
+		</ul>
+	</div>
+</div>
+<form action="/items" method="GET" id="formModal">
+	<div class="row-fluid">
+		<div class="tab-content">
+			<div class="tab-pane active" id="sourcesFirst">
+				<div class="row-fluid">
+					<div class="span1"></div>
+					<div class="span10">
+						<h2>Sélectionner vos sources</h2>
+					</div>
+				</div>
+				<div class="row-fluid">
+					<div class="span12">
+						<div class="row-fluid">
+							<div class="span1"></div>
+							<div class="span2">
+								<img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundTwitter.png" onclick="slideDown('#formTwitter')"/>
+							</div>
+							<div class="span2"></div>
+							<div class="span2">
+								<img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundGoogleGray.png"/>
+							</div>
+							<div class="span2"></div>
+							<div class="span2">
+								<img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundRSS.png" onclick="slideDown('#formRSS')"/>
+							</div>
+						</div>
+						<div class="row-fluid">
+							<div class="span1"></div>
+							<div class="span10">
+								<div id="formTwitter" class="form" style="display:none;">
+									<p></p><p></p>
+									<p>
+										<i class="icon-white icon-user"></i>
+										<input name="inputLogin" type="text" class="inputLogin span10" id="loginTwitter" placeholder="Login" onclick="$(this).prop('readonly',false);$('#searchTwitter').prop('readonly',true);$('#searchTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}">
+									</p>
+									<p>
+										<i class="icon-search icon-white"></i>
+										<input name="inputSearch" type="text" class="inputSearch span10" id="searchTwitter" placeholder="Tag" readonly onclick="$(this).prop('readonly',false);$('#loginTwitter').prop('readonly',true);$('#loginTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}" />
 
+										<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formTwitter');return false;">
+											<%= raw t 'semanticsource.button.addall' %>
+										</button>
+										<button class="pull-right btn btn-info" type="button" onclick="addRowSourceTable('#formTwitter');return false;">
+											<%= raw t 'semanticsource.button.addone' %>
+										</button>
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="row-fluid">
+							<div class="span1"></div>
+							<div class="span10">
+								<div id="formRSS" class="form" style="display:none;">
+									<p></p><p></p>
+									<p>
+										<input name="inputHidden" type="hidden" class="inputLogin span10">
+									</p>
+									<p>
+										<i class="icon-white icon-search"></i>
+										<input name="inputSearch" type="text" class="inputSearch span10" placeholder="URL" onKeyPress="if (event.keyCode == 13){addRowSourceTable('#formRSS');return false;}">
+
+										<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formRSS');return false;">
+											<%= raw t 'semanticsource.button.addall' %>
+										</button>
+										<button class="pull-right btn btn-warning" type="button" onclick="addRowSourceTable('#formRSS');return false;">
+											<%= raw t 'semanticsource.button.addone' %>
+										</button>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div><!--span12 -->
+				</div><!--row-fluid -->
+				<div class="row-fluid">
+					<div class="span4">
+					</div>
+					<div class="span4">
+						<button class="btn btn-success"><h3>Valider et passer à la suite</h3></button>
+					</div>
+				</div>
+			</div><!--tab-pane -->
+			<div class="tab-pane" id="sourcesSecond"></div>
+			<div class="tab-pane" id="FilteringFirst"></div>
+			<div class="tab-pane" id="FilteringSecond"></div>
+		</div>
+	</div>
+</form>
