--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -33,70 +33,137 @@
 					<div class="span12">
 						<div class="row-fluid">
 							<div class="span1"></div>
-							<div class="span2">
-								<img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundTwitter.png" onclick="slideDown('#formTwitter')"/>
+							<div class="span2" id="imgTwitter">
+								<img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundTwitter.png" onclick="slideDown('#formTwitter');setAfter('#imgTwitter')"/>
 							</div>
 							<div class="span2"></div>
-							<div class="span2">
+							<div class="span2" id="imgGoogle">
 								<img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundGoogleGray.png"/>
 							</div>
 							<div class="span2"></div>
-							<div class="span2">
-								<img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundRSS.png" onclick="slideDown('#formRSS')"/>
+							<div class="span2" id="imgRSS">
+								<img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundRSS.png" onclick="slideDown('#formRSS');setAfter('#imgRSS')"/>
 							</div>
 						</div>
-						<div class="row-fluid">
+						<div id="formTwitter" class="row-fluid form" style="display:none;">
 							<div class="span1"></div>
 							<div class="span10">
-								<div id="formTwitter" class="form" style="display:none;">
-									<p></p><p></p>
-									<p>
-										<i class="icon-white icon-user"></i>
-										<input name="inputLogin" type="text" class="inputLogin span10" id="loginTwitter" placeholder="Login" onclick="$(this).prop('readonly',false);$('#searchTwitter').prop('readonly',true);$('#searchTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}">
-									</p>
-									<p>
-										<i class="icon-search icon-white"></i>
-										<input name="inputSearch" type="text" class="inputSearch span10" id="searchTwitter" placeholder="Tag" readonly onclick="$(this).prop('readonly',false);$('#loginTwitter').prop('readonly',true);$('#loginTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}" />
-
-										<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formTwitter');return false;">
-											<%= raw t 'semanticsource.button.addall' %>
-										</button>
-										<button class="pull-right btn btn-info" type="button" onclick="addRowSourceTable('#formTwitter');return false;">
-											<%= raw t 'semanticsource.button.addone' %>
-										</button>
-									</p>
+								<div class="contentTwitter" >
+									<div class="formHeader">
+										<div class="span1"></div>
+										<b>Twitter</b>
+									</div>
+									<div class="formContent">
+										<div class="row-fluid">
+											<div class="span12 input-prepend">
+												<div class="span1"></div>
+												<span class="add-on">@</span>
+												<input name="inputLogin" type="text" class="inputLogin span10" id="loginTwitter" placeholder="Login" onclick="$(this).prop('readonly',false);$('#searchTwitter').prop('readonly',true);$('#searchTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}">
+											</div>
+										</div>
+										<div class="row-fluid">
+											<div class="span12 input-prepend">
+												<div class="span1"></div>
+												<span class="add-on">#</span>
+												<input name="inputSearch" type="text" class="inputSearch span10" id="searchTwitter" placeholder="Tag" readonly onclick="$(this).prop('readonly',false);$('#loginTwitter').prop('readonly',true);$('#loginTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}" />
+											</div>
+										</div>
+										<div class="row-fluid">
+											<div class="span12">
+												<button class="pull-right btn btn-info" type="button" onclick="addRowSourceTable('#formTwitter');return false;">
+													<%= raw t 'semanticsource.button.addone' %>
+												</button>
+											</div>
+										</div>
+										<div class="row-fluid">
+											<div class="span12">
+												<hr>
+											</div>
+										</div>
+										<div class="row-fluid">
+											<div class="span5"></div>
+											<div class="span2">
+												<button class="btn btn-success span12" type="button" onclick="addAllSourceTable('formTwitter');return false;">
+													<%= raw t 'semanticsource.button.addall' %>
+												</button>
+											</div>
+										</div>
+										<div class="row-fluid">
+											<div class="span12">
+												<div class="span1"></div>
+												<b>Vos choix</b>
+											</div>
+										</div>
+										<div class="row-fluid">
+											<div class="span1"></div>
+											<div class="span10 well"></div>
+										</div>
+									</div>
+									<!--formContent twiiter-->
 								</div>
 							</div>
 						</div>
-						<div class="row-fluid">
+						<div id="formRSS" class="row-fluid form" style="display:none;">
 							<div class="span1"></div>
 							<div class="span10">
-								<div id="formRSS" class="form" style="display:none;">
-									<p></p><p></p>
-									<p>
-										<input name="inputHidden" type="hidden" class="inputLogin span10">
-									</p>
-									<p>
-										<i class="icon-white icon-search"></i>
-										<input name="inputSearch" type="text" class="inputSearch span10" placeholder="URL" onKeyPress="if (event.keyCode == 13){addRowSourceTable('#formRSS');return false;}">
-
-										<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formRSS');return false;">
-											<%= raw t 'semanticsource.button.addall' %>
-										</button>
-										<button class="pull-right btn btn-warning" type="button" onclick="addRowSourceTable('#formRSS');return false;">
-											<%= raw t 'semanticsource.button.addone' %>
-										</button>
-									</p>
+								<div class="contentRSS">
+									<div class="formHeader">
+										<div class="span1"></div>
+										<b>RSS</b>
+									</div>
+									<div class="formContent">
+										<div class="row-fluid">
+											<div class="span12 input-prepend">
+												<div class="span1"></div>
+												<span class="add-on"><i class="icon-white icon-search"></i></span>
+												<input name="inputSearch" type="text" class="inputSearch span10" placeholder="URL" onKeyPress="if (event.keyCode == 13){addRowSourceTable('#formRSS');return false;}">
+											</div>
+										</div>
+										<div class="row-fluid">
+											<div class="span1"></div>
+											<div class="span10">
+												<button class="pull-right btn btn-info" type="button" onclick="addRowSourceTable('#formRSS');return false;">
+													<%= raw t 'semanticsource.button.addone' %>
+												</button>
+											</div>
+										</div>
+										<div class="row-fluid">
+											<div class="span12">
+												<hr>
+											</div>
+										</div>
+										<div class="row-fluid">
+											<div class="span5"></div>
+											<div class="span2">
+												<button class="btn btn-success span12" type="button" onclick="addAllSourceTable('formRSS');return false;">
+													<%= raw t 'semanticsource.button.addall' %>
+												</button>
+											</div>
+										</div>
+										<div class="row-fluid">
+											<div class="span12">
+												<div class="span1"></div>
+												<b>Vos choix</b>
+											</div>
+										</div>
+										<div class="row-fluid">
+											<div class="span1"></div>
+											<div class="span10 well"></div>
+										</div>
+									</div>
+									<!--formContent twiiter-->
 								</div>
 							</div>
 						</div>
 					</div><!--span12 -->
 				</div><!--row-fluid -->
+				<hr>
 				<div class="row-fluid">
+					<div class="span4"></div>
 					<div class="span4">
-					</div>
-					<div class="span4">
-						<button class="btn btn-success"><h3>Valider et passer à la suite</h3></button>
+						<button class="btn btn-success">
+							<h3>Valider et passer à la suite</h3>
+						</button>
 					</div>
 				</div>
 			</div><!--tab-pane -->
