Changed the tab

--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -169,12 +169,14 @@
 				</div>
 			</div><!--tab-pane -->
 			<div class="tab-pane" id="sourcesSecond">
-				toto
+				Hi i'm sources 2/2
 			</div>
 			<div class="tab-pane" id="FilteringFirst">
-				tutu
+				Hi i'm filtering 1/2
 			</div>
-			<div class="tab-pane" id="FilteringSecond"></div>
+			<div class="tab-pane" id="FilteringSecond">
+				Hi i'm filtering 2/2
+			</div>
 		</div>
 	</div>
 </form>
