Set the navigation bar

--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -1,20 +1,20 @@
 <div class="row-fluid">
 	<div class="span12">
 		<ul class="breadcrumb">
-			<li class="active">
-				Sources (1/2)<span class="divider">/</span>
+			<li id="breadcrumbSourcesOne" class="active">
+				<%= raw t 'newmodal.breadcrumb.sources.one' %><span class="divider">/</span>
+			</li>
+			<li id="breadcrumbSourcesTwo" style="display:none">
+				<%= raw t 'newmodal.breadcrumb.sources.two' %><span class="divider">/</span>
+			</li>
+			<li id="breadcrumbFilteringOne">
+				<%= raw t 'newmodal.breadcrumb.filtering.one' %><span class="divider">/</span>
+			</li>
+			<li id="breadcrumbFilteringTwo" style="display:none">
+				<%= raw t 'newmodal.breadcrumb.filtering.two' %><span class="divider">/</span>
 			</li>
 			<li>
-				Sources (2/2)<span class="divider">/</span>
-			</li>
-			<li>
-				Filtrage (1/2)<span class="divider">/</span>
-			</li>
-			<li>
-				Filtrage (2/2)<span class="divider">/</span>
-			</li>
-			<li>
-				Résultats
+				<%= raw t 'newmodal.breadcrumb.results' %>
 			</li>
 		</ul>
 	</div>
