Changed the layout of the navigation bar

--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -2,16 +2,16 @@
 	<div class="span12">
 		<ul class="breadcrumb">
 			<li id="breadcrumbSourcesOne" class="active">
-				<%= raw t 'newmodal.breadcrumb.sources.one' %><span class="divider">/</span>
+				<%= raw t 'newmodal.breadcrumb.sources.one' %><span class="divider"><i class="icon icon-chevron-right"></i></span>
 			</li>
 			<li id="breadcrumbSourcesTwo" style="display:none">
-				<%= raw t 'newmodal.breadcrumb.sources.two' %><span class="divider">/</span>
+				<%= raw t 'newmodal.breadcrumb.sources.two' %><span class="divider"><i class="icon icon-chevron-right"></i></span>
 			</li>
 			<li id="breadcrumbFilteringOne">
-				<%= raw t 'newmodal.breadcrumb.filtering.one' %><span class="divider">/</span>
+				<%= raw t 'newmodal.breadcrumb.filtering.one' %><span class="divider"><i class="icon icon-chevron-right"></i></span>
 			</li>
 			<li id="breadcrumbFilteringTwo" style="display:none">
-				<%= raw t 'newmodal.breadcrumb.filtering.two' %><span class="divider">/</span>
+				<%= raw t 'newmodal.breadcrumb.filtering.two' %><span class="divider"><i class="icon icon-chevron-right"></i></span>
 			</li>
 			<li>
 				<%= raw t 'newmodal.breadcrumb.results' %>
