--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -2,16 +2,16 @@
 	<div class="span12">
 		<ul class="breadcrumb">
 			<li id="breadcrumbSourcesOne" class="active">
-				<%= raw t 'newmodal.breadcrumb.sources.one' %><span class="divider"><i class="icon icon-chevron-right"></i></span>
+				<%= raw t 'newmodal.breadcrumb.sources.one' %><span class="divider"><i class="icon-chevron-right"></i></span>
 			</li>
 			<li id="breadcrumbSourcesTwo" style="display:none">
-				<%= raw t 'newmodal.breadcrumb.sources.two' %><span class="divider"><i class="icon icon-chevron-right"></i></span>
+				<%= raw t 'newmodal.breadcrumb.sources.two' %><span class="divider"><i class="icon-chevron-right"></i></span>
 			</li>
 			<li id="breadcrumbFilteringOne">
-				<%= raw t 'newmodal.breadcrumb.filtering.one' %><span class="divider"><i class="icon icon-chevron-right"></i></span>
+				<%= raw t 'newmodal.breadcrumb.filtering.one' %><span class="divider"><i class="icon-chevron-right"></i></span>
 			</li>
 			<li id="breadcrumbFilteringTwo" style="display:none">
-				<%= raw t 'newmodal.breadcrumb.filtering.two' %><span class="divider"><i class="icon icon-chevron-right"></i></span>
+				<%= raw t 'newmodal.breadcrumb.filtering.two' %><span class="divider"><i class="icon-chevron-right"></i></span>
 			</li>
 			<li>
 				<%= raw t 'newmodal.breadcrumb.results' %>
@@ -34,7 +34,7 @@
 						<div class="row-fluid">
 							<div class="span1"></div>
 							<div class="span2" id="imgTwitter">
-								<img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundTwitter.png" onclick="slideDown('#formTwitter');setAfter('#imgTwitter')"/>
+								<img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundTwitter.png" onclick="slideDown('#formTwitter');"/>
 							</div>
 							<div class="span2"></div>
 							<div class="span2" id="imgGoogle">
@@ -42,7 +42,7 @@
 							</div>
 							<div class="span2"></div>
 							<div class="span2" id="imgRSS">
-								<img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundRSS.png" onclick="slideDown('#formRSS');setAfter('#imgRSS')"/>
+								<img class="circleImage thumbnail accordion-toggle" src="/assets/foregroundRSS.png" onclick="slideDown('#formRSS');"/>
 							</div>
 						</div>
 						<div id="formTwitter" class="row-fluid form" style="display:none;">
@@ -58,22 +58,14 @@
 											<div class="span12 input-prepend">
 												<div class="span1"></div>
 												<span class="add-on">@</span>
-												<input name="inputLogin" type="text" class="inputLogin span10" id="loginTwitter" placeholder="Login" onclick="$(this).prop('readonly',false);$('#searchTwitter').prop('readonly',true);$('#searchTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}">
+												<input name="inputLogin" type="text" class="inputLogin span10" id="loginTwitter" placeholder="<%= raw t 'newmodal.sources.twitter.holderpersonn' %>" onclick="$(this).prop('readonly',false);$('#searchTwitter').prop('readonly',true);$('#searchTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addSource('#wellTwitter','#loginTwitter');return false;}">
 											</div>
 										</div>
 										<div class="row-fluid">
 											<div class="span12 input-prepend">
 												<div class="span1"></div>
 												<span class="add-on">#</span>
-												<input name="inputSearch" type="text" class="inputSearch span10" id="searchTwitter" placeholder="Tag" readonly onclick="$(this).prop('readonly',false);$('#loginTwitter').prop('readonly',true);$('#loginTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}" />
-											</div>
-										</div>
-										<div class="row-fluid">
-											<div class="span1"></div>
-											<div class="span10">
-												<button class="pull-right btn btn-info" type="button" onclick="addRowSourceTable('#formTwitter');return false;">
-													<%= raw t 'newmodal.sources.add' %>
-												</button>
+												<input name="inputSearch" type="text" class="inputSearch span10" id="searchTwitter" placeholder="<%= raw t 'newmodal.sources.twitter.holdertag' %>" readonly onclick="$(this).prop('readonly',false);$('#loginTwitter').prop('readonly',true);$('#loginTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addSource('#wellTwitter','#searchTwitter');return false;}" />
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -82,9 +74,9 @@
 											</div>
 										</div>
 										<div class="row-fluid">
-											<div class="span5"></div>
-											<div class="span2">
-												<button class="btn btn-success span12" type="button" onclick="addAllSourceTable('formTwitter');return false;">
+											<div class="span4"></div>
+											<div class="span4">
+												<button class="btn btn-success span12" type="button" onclick="addAllSource('#wellTwitter');return false;">
 													<%= raw t 'newmodal.sources.twitter.all' %>
 												</button>
 											</div>
@@ -97,7 +89,7 @@
 										</div>
 										<div class="row-fluid">
 											<div class="span1"></div>
-											<div class="span10 well"></div>
+											<div id="wellTwitter" class="span10 well"></div>
 										</div>
 									</div>
 									<!--formContent twiiter-->
@@ -117,15 +109,7 @@
 											<div class="span12 input-prepend">
 												<div class="span1"></div>
 												<span class="add-on"><i class="icon-white icon-search"></i></span>
-												<input name="inputSearch" type="text" class="inputSearch span10" placeholder="URL" onKeyPress="if (event.keyCode == 13){addRowSourceTable('#formRSS');return false;}">
-											</div>
-										</div>
-										<div class="row-fluid">
-											<div class="span1"></div>
-											<div class="span10">
-												<button class="pull-right btn btn-info" type="button" onclick="addRowSourceTable('#formRSS');return false;">
-													<%= raw t 'newmodal.sources.add' %>
-												</button>
+												<input name="inputSearch" id="searchRSS" type="text" class="inputSearch span10" placeholder="<%= raw t 'newmodal.sources.rss.holderurl' %>" onKeyPress="if (event.keyCode == 13){addSource('#wellRSS','#searchRSS');return false;}">
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -134,9 +118,9 @@
 											</div>
 										</div>
 										<div class="row-fluid">
-											<div class="span5"></div>
-											<div class="span2">
-												<button class="btn btn-success span12" type="button" onclick="addAllSourceTable('formRSS');return false;">
+											<div class="span4"></div>
+											<div class="span4">
+												<button class="btn btn-success span12" type="button" onclick="addAllSource('#wellRSS');return false;">
 													<%= raw t 'newmodal.sources.rss.all' %>
 												</button>
 											</div>
@@ -149,7 +133,7 @@
 										</div>
 										<div class="row-fluid">
 											<div class="span1"></div>
-											<div class="span10 well"></div>
+											<div id="wellRSS" class="span10 well"></div>
 										</div>
 									</div>
 									<!--formContent twiiter-->
