Sources are well added in their respective table
Add a little symbol ( @ or #) in front of twitter tag

--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -76,7 +76,7 @@
 										<div class="row-fluid">
 											<div class="span4"></div>
 											<div class="span4">
-												<button class="btn btn-success span12" type="button" onclick="addAllSource('#wellTwitter');return false;">
+												<button class="btn btn-success span12" type="button" onclick="addAllSource('#wellTwitter','<%= raw t 'newmodal.sources.twitter.all' %>');return false;">
 													<%= raw t 'newmodal.sources.twitter.all' %>
 												</button>
 											</div>
@@ -120,7 +120,7 @@
 										<div class="row-fluid">
 											<div class="span4"></div>
 											<div class="span4">
-												<button class="btn btn-success span12" type="button" onclick="addAllSource('#wellRSS');return false;">
+												<button class="btn btn-success span12" type="button" onclick="addAllSource('#wellRSS','<%= raw t 'newmodal.sources.rss.all' %>');return false;">
 													<%= raw t 'newmodal.sources.rss.all' %>
 												</button>
 											</div>
