Removed the css into js files

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -252,3 +252,14 @@ ul.sortable li {
 .well{
   word-break: normal;
 }
+
+.blackh4{
+  color:black;
+}
+span.label-wrap{
+  white-space: pre-wrap;
+  min-height: 0px;
+  width: auto;
+  margin-top:2px;
+  word-break:break-all;
+}
