--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -76,7 +76,7 @@
 													<hr>
 												</div>
 												<div class="span4" style="text-align:center;">
-													<h4 style="color:black"><%= raw t 'newmodal.sources.separator' %></h4>
+													<h4 class="blackh4"><%= raw t 'newmodal.sources.separator' %></h4>
 												</div>
 												<div class="span4">
 													<hr>
@@ -129,7 +129,7 @@
 													<hr>
 												</div>
 												<div class="span4" style="text-align:center;">
-													<h4 style="color:black"><%= raw t 'newmodal.sources.separator' %></h4>
+													<h4 class="blackh4"><%= raw t 'newmodal.sources.separator' %></h4>
 												</div>
 												<div class="span4">
 													<hr>
