Block the add of all/one sources intelligently
If there is already a single source, block the add of all sources

If there is all sources, block the add of single sources

--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -87,7 +87,7 @@
 											<div class="span4"></div>
 											<div class="span4">
 												<div class="span1"></div>
-												<button class="btn btn-success span10" type="button" onclick="addAllSource('#wellTwitter','<%= raw t 'newmodal.sources.twitter.all' %>');return false;">
+												<button id="addAllTwitter" class="btn btn-success span10" type="button" onclick="addAllSource('#wellTwitter','<%= raw t 'newmodal.sources.twitter.all' %>');return false;">
 													<%= raw t 'newmodal.sources.twitter.all' %>
 												</button>
 											</div>
@@ -145,7 +145,7 @@
 											</div>
 											<div class="span4">
 												<div class="span1"></div>
-												<button class="btn btn-success span10" type="button" onclick="addAllSource('#wellRSS','<%= raw t 'newmodal.sources.rss.all' %>');return false;">
+												<button id="addAllRSS" class="btn btn-success span10" type="button" onclick="addAllSource('#wellRSS','<%= raw t 'newmodal.sources.rss.all' %>');return false;">
 													<%= raw t 'newmodal.sources.rss.all' %>
 												</button>
 											</div>
