Added some color in the navigation bar

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -263,3 +263,11 @@ span.label-wrap{
   margin-top:2px;
   word-break:break-all;
 }
+
+.breadcrumb > li{
+  color : #999;
+}
+
+.breadcrumb > li.active{
+  color : #0088cc;
+}
