Limited the max-size of the sources box

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -271,3 +271,15 @@ span.label-wrap{
 .breadcrumb > li.active{
   color : #0088cc;
 }
+
+#wellRSS{
+  max-height: 300px;
+  overflow-y: auto;
+  overflow-x:hidden;
+}
+
+#wellTwitter{
+  max-height: 300px;
+  overflow-y: auto;
+  overflow-x:hidden;
+}
