Limited the max-size of the summary box

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -272,13 +272,7 @@ span.label-wrap{
   color : #0088cc;
 }
 
-#wellRSS{
-  max-height: 300px;
-  overflow-y: auto;
-  overflow-x:hidden;
-}
-
-#wellTwitter{
+#wellRSS,#wellTwitter,#resumeWellRSS,#resumeWellTwitter{
   max-height: 300px;
   overflow-y: auto;
   overflow-x:hidden;
