--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -189,6 +189,65 @@
 						</button></h2>
 					</div>
 				</div>
+				<div class="row-fluid">
+					<div class="span1"></div>
+					<div class="span10">
+						<div class="row-fluid">
+							<input class="span12" id="keyword" type="text" placeholder="Keyword" onkeypress="keywordComplete();" onkeyup="askUpdateKeywordTable();return false;">
+						</div>
+					</div>
+				</div>
+				<div class="row-fluid">
+					<div class="span1"></div>
+					<div class="span10">
+						<div class="row-fluid">
+							<div class="span8">
+								<h3><%= raw t 'semanticfiltering.linkword.title' %></h3>
+							</div>
+							<div class="span4">
+								<h3><%= raw t 'semanticfiltering.table.title' %></h3>
+							</div>
+						</div>
+						<div class="row-fluid">
+							<div class="span8">
+								<div class="row-fluid">
+									<div class="span12">
+										
+									</div>
+								</div>
+								<div class="row-fluid">
+									<div class="span12">
+										<div class="keywordOverflow">
+											<div id="progressBarFiltering" class="progress progress-striped active">
+												<div class="bar bar-success span12"></div>
+											</div>
+											<table class="table table-striped table-bordered table-hover pre-scrollable" id="keywordTable">
+												<tbody></tbody>
+											</table>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="span4">
+								<div class="row-fluid">
+									<button class="btn btn-info span12 marged" type="button">
+										<h4 class="whiteh4">Optionnel</h4>
+									</button>
+								</div>
+								<div class="row-fluid">
+									<button class="btn btn-success span12 marged" type="button">
+										<h4 class="whiteh4">Obligatoire</h4>
+									</button>
+								</div>
+								<div class="row-fluid">
+									<button class="btn btn-danger span12" type="button">
+										<h4 class="whiteh4">Interdit</h4>
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
