--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -183,7 +183,7 @@
 				<div class="row-fluid">
 					<div class="span1"></div>
 					<div class="span10">
-						<h2><%= raw t 'newmodal.filtering.title' %>
+						<h2><span class="numberFiltering bigNumberFiltering">1</span> <%= raw t 'newmodal.filtering.title' %>
 						<button class="btn btn-primary pull-right" type="button" onclick="reverseSwitchTab()">
 							<%= raw t 'newmodal.sources.reverseswitch' %>
 						</button></h2>
@@ -202,10 +202,10 @@
 					<div class="span10">
 						<div class="row-fluid">
 							<div class="span8">
-								<h3><%= raw t 'newmodal.filtering.related' %></h3>
+								<h3><span class="numberFiltering smallNumberFiltering">2</span> <%= raw t 'newmodal.filtering.related' %></h3>
 							</div>
 							<div class="span4">
-								<h3><%= raw t 'newmodal.filtering.filtertype' %></h3>
+								<h3><span class="numberFiltering smallNumberFiltering">3</span> <%= raw t 'newmodal.filtering.filtertype' %></h3>
 							</div>
 						</div>
 						<div class="row-fluid">
@@ -257,7 +257,7 @@
 				</div>
 				<div class="row-fluid">
 					<div class="span1"></div>
-					<div id="wellOr" class="span10 well">
+					<div id="wellOr" class="span10 well well-info">
 					</div>
 				</div>
 				<div class="row-fluid">
@@ -268,7 +268,7 @@
 				</div>
 				<div class="row-fluid">
 					<div class="span1"></div>
-					<div id="wellAnd" class="span10 well">
+					<div id="wellAnd" class="span10 well well-success">
 					</div>
 				</div>
 				<div class="row-fluid">
@@ -279,10 +279,25 @@
 				</div>
 				<div class="row-fluid">
 					<div class="span1"></div>
-					<div id="wellWithout" class="span10 well">
+					<div id="wellWithout" class="span10 well well-danger">
 					</div>
 				</div>
-			</div>
+				<div class="row-fluid">
+					<div class="span1"></div>
+					<div class="span10">
+						<hr>
+					</div>
+				</div>
+				<div class="row-fluid">
+					<div class="span4"></div>
+					<div class="span4">
+						<a href="/items">
+						<button class="btn btn-success span12" type="button">
+							<h3><%= raw t 'newmodal.sources.goreador' %></h3>
+						</button> </a>
+					</div>
+				</div>
+			</div> <!--Pane-filtering-->
 		</div>
 	</div>
 </form>
