Changed the color of the number

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -304,8 +304,9 @@ span.label-wrap{
 }
 
 .numberFiltering{
-  background-color:#BDBDBD;
-  color:white;
+  background-color: #f5f5f5;
+  color: #0088cc;
+  border: solid 1px;
 }
 .bigNumberFiltering{
   border-radius:25px;
