Changed some css for the h4 elements

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -261,11 +261,11 @@ ul.sortable li {
   word-break: normal;
 }
 
-.blackh4{
+h4.black{
   color:black;
 }
 
-.whiteh4{
+h4.white{
   color:white;
 }
 
