--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -70,7 +70,7 @@
 													<hr>
 												</div>
 												<div class="span4 text-center">
-													<h4 class="blackh4"><%= raw t 'newmodal.sources.separator' %></h4>
+													<h4 class="black"><%= raw t 'newmodal.sources.separator' %></h4>
 												</div>
 												<div class="span4">
 													<hr>
@@ -114,7 +114,7 @@
 													<hr>
 												</div>
 												<div class="span4 text-center">
-													<h4 class="blackh4"><%= raw t 'newmodal.sources.separator' %></h4>
+													<h4 class="black"><%= raw t 'newmodal.sources.separator' %></h4>
 												</div>
 												<div class="span4">
 													<hr>
@@ -228,17 +228,17 @@
 								</div>
 								<div class="row-fluid">
 									<button class="btn btn-info span12 marged" type="button" onclick="addFilter('or');return false">
-										<h4 class="whiteh4"><%= raw t 'newmodal.filtering.buttonOption' %></h4>
+										<h4 class="white"><%= raw t 'newmodal.filtering.buttonOption' %></h4>
 									</button>
 								</div>
 								<div class="row-fluid">
 									<button class="btn btn-success span12 marged" type="button" onclick="addFilter('and');return false">
-										<h4 class="whiteh4"><%= raw t 'newmodal.filtering.buttonMusthave' %></h4>
+										<h4 class="white"><%= raw t 'newmodal.filtering.buttonMusthave' %></h4>
 									</button>
 								</div>
 								<div class="row-fluid">
 									<button class="btn btn-danger span12" type="button" onclick="addFilter('without');return false">
-										<h4 class="whiteh4"><%= raw t 'newmodal.filtering.buttonBan' %></h4>
+										<h4 class="white"><%= raw t 'newmodal.filtering.buttonBan' %></h4>
 									</button>
 								</div>
 							</div>
@@ -254,7 +254,7 @@
 				<div class="row-fluid">
 					<div class="span1"></div>
 					<div class="span10">
-						<h4 class="blackh4"><%= raw t 'newmodal.filtering.resume.option' %></h4>
+						<h4 class="black"><%= raw t 'newmodal.filtering.resume.option' %></h4>
 					</div>
 				</div>
 				<div class="row-fluid">
@@ -265,7 +265,7 @@
 				<div class="row-fluid">
 					<div class="span1"></div>
 					<div class="span10">
-						<h4 class="blackh4"><%= raw t 'newmodal.filtering.resume.musthave' %></h4>
+						<h4 class="black"><%= raw t 'newmodal.filtering.resume.musthave' %></h4>
 					</div>
 				</div>
 				<div class="row-fluid">
@@ -276,7 +276,7 @@
 				<div class="row-fluid">
 					<div class="span1"></div>
 					<div class="span10">
-						<h4 class="blackh4"><%= raw t 'newmodal.filtering.resume.ban' %></h4>
+						<h4 class="black"><%= raw t 'newmodal.filtering.resume.ban' %></h4>
 					</div>
 				</div>
 				<div class="row-fluid">
