[#53469053] first draft of advanced search tool linked to db

--- a/ZONE-watcher/app/views/home/_advancedSearch.html.erb
+++ b/ZONE-watcher/app/views/home/_advancedSearch.html.erb
@@ -4,7 +4,7 @@
 </div>-->
 
 <!--<div class="modal-body">-->
-<form action="/items" method="GET" id="formModal">
+<form action="/searches" method="post" id="formModal">
 	<div class="modal-header" >
 		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 			×
@@ -13,6 +13,7 @@
 		<h3 class="titleFiltering hidden"><%= raw t 'semanticfiltering.title' %></h3>
 	</div>
 	<div class="modal-body bodyModal">
+
 		<div class="row-fluid" xmlns="http://www.w3.org/1999/html">
 			<div class="span12">
 				<div class="tabbable tabs-left">
