Collect the data

--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -172,10 +172,9 @@
 					</div>
 					<div class="span2"></div>
 					<div class="span4">
-						<a href="/items">
-						<button class="btn btn-success span12" type="button">
+						<button class="btn btn-success span12 goItem" type="button">
 							<h3><%= raw t 'newmodal.sources.goreador' %></h3>
-						</button> </a>
+						</button>
 					</div>
 				</div>
 			</div><!--tab-pane -->
@@ -293,10 +292,9 @@
 				<div class="row-fluid">
 					<div class="span4"></div>
 					<div class="span4">
-						<a href="/items">
-						<button class="btn btn-success span12" type="button">
+						<button class="btn btn-success span12 goItem" type="button">
 							<h3><%= raw t 'newmodal.sources.goreador' %></h3>
-						</button> </a>
+						</button>
 					</div>
 				</div>
 			</div> <!--Pane-filtering-->
